--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "no-constant-condition": 2,
     "@typescript-eslint/no-var-requires": 0,
     "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-explicit-any": "off",
     "comma-dangle": [2, "always-multiline"],
     "no-var": 2,
     "eqeqeq": [2, "allow-null"],
