--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:prod": "cross-env NODE_ENV=production && pnpm build",
     "test": "esno test/run.ts",
     "test:update": "cross-env UPDATE_SNAPSHOT=true esno test/run.ts",
+    "test:dts": "tsc -p ./test-dts --noEmit",
     "coverage": "nyc --nycrc-path=.nycrc.json pnpm test",
     "release": "bumpp --tag --commit --push"
   },
