--- a/test/parser/__snapshots__/css.test.ts.yml
+++ b/test/parser/__snapshots__/css.test.ts.yml
@@ -11,6 +11,11 @@ Tools / apply chain / css / 0: |-
     --tw-bg-opacity: 1;
     background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
   }
+Tools / apply hover with multiple selector / css / 0: |-
+  .a:hover, .b:hover {
+    --tw-text-opacity: 1;
+    color: rgba(254, 202, 202, var(--tw-text-opacity));
+  }
 Tools / normal parse / css / 0: |-
   @charset "utf-8";
   @tailwind base;
