--- a/test/processor/__snapshots__/config.test.ts.yml
+++ b/test/processor/__snapshots__/config.test.ts.yml
@@ -1,3 +1,25 @@
+Tools / allows to use prefix with shortcuts / shortcuts with prefix / 0: |-
+  .windi-btn {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    font-weight: 600;
+    border-radius: 0.5rem;
+    --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+  .windi-btn-green {
+    --tw-text-opacity: 1;
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
+    --tw-bg-opacity: 1;
+    background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+  }
+  .windi-btn-green:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
+  }
 Tools / animation config test / animate / 0: |-
   @keyframes skbounce {
     0%, 100% {
@@ -115,7 +137,7 @@ Tools / shortcuts config string / shortcuts string / 0: |-
     background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
   }
   @media (min-width: 1024px) {
-    .btn {
+    .lg\:btn {
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
       padding-left: 1rem;
