--- a/test/parser/__snapshots__/css.test.ts.yml
+++ b/test/parser/__snapshots__/css.test.ts.yml
@@ -28,8 +28,7 @@ Tools / normal parse / css / 0: |-
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
   }
-  img,
-  video {
+  img, video {
     max-width: 100%;
     height: auto;
   }
@@ -109,8 +108,7 @@ Tools / transform parse / css / 0: |-
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
   }
-  img,
-  video {
+  img, video {
     max-width: 100%;
     height: auto;
   }
