--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "rollup -cw",
     "tsd": "tsc -p ./src --emitDeclarationOnly",
     "lint": "eslint . --ext .ts",
+    "lint:fix": "npm run lint -- --fix",
     "typecheck": "tsc -p ./src --noEmit",
     "build": "rollup -c && pnpm tsd",
     "build:prod": "cross-env NODE_ENV=production && pnpm build",
