--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@rollup/plugin-replace": "^2.3.4",
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/plugin-typescript": "^8.1.0",
+    "@types/color-string": "^1.5.0",
     "@types/diff": "^5.0.0",
     "@types/fs-extra": "^9.0.7",
     "@types/jasmine": "^3.6.3",
@@ -123,6 +124,7 @@
     "bumpp": "^6.0.6",
     "caller-path": "^3.0.0",
     "chalk": "^4.1.0",
+    "color-string": "^1.5.4",
     "cross-env": "^7.0.3",
     "css-select": "^3.1.2",
     "css-what": "^4.0.0",
