fix: remove camel case colors fix: static config and tailwind remain the same

--- a/test/processor/__snapshots__/utilities.test.ts.yml
+++ b/test/processor/__snapshots__/utilities.test.ts.yml
@@ -206,10 +206,10 @@ Tools / grid template test / grid template / 0: |-
     grid-template-rows: repeat(auto-fit, minmax(16em, 1fr));
   }
   .grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .grid-rows-4 {
-    grid-template-rows: repeat(4, minmax(0, 1fr));;
+    grid-template-rows: repeat(4, minmax(0, 1fr));
   }
 Tools / ring opacity / css / 0: |-
   .ring-transparent {
