--- a/test/plugin/__snapshots__/typography.test.ts.yml
+++ b/test/plugin/__snapshots__/typography.test.ts.yml
@@ -1,24 +1,24 @@
 Tools / interpret test / css / 0: |-
   .prose {
-    color: #374151;
+    color: #3f3f46;
     max-width: 65ch;
     font-size: 1rem;
     line-height: 1.75;
   }
   .prose [class~="lead"] {
-    color: #4b5563;
+    color: #52525b;
     font-size: 1.25em;
     line-height: 1.6;
     margin-top: 1.2em;
     margin-bottom: 1.2em;
   }
   .prose a {
-    color: #111827;
+    color: #18181b;
     text-decoration: underline;
     font-weight: 500;
   }
   .prose strong {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
   }
   .prose ol[type="A"] {
@@ -56,7 +56,7 @@ Tools / interpret test / css / 0: |-
     content: counter(list-item, var(--list-counter-style, decimal)) ".";
     position: absolute;
     font-weight: 400;
-    color: #6b7280;
+    color: #71717a;
     left: 0;
   }
   .prose ul > li {
@@ -66,7 +66,7 @@ Tools / interpret test / css / 0: |-
   .prose ul > li::before {
     content: "";
     position: absolute;
-    background-color: #d1d5db;
+    background-color: #d4d4d8;
     border-radius: 50%;
     width: 0.375em;
     height: 0.375em;
@@ -74,16 +74,16 @@ Tools / interpret test / css / 0: |-
     left: 0.25em;
   }
   .prose hr {
-    border-color: #e5e7eb;
+    border-color: #e4e4e7;
     margin-top: 3em;
     margin-bottom: 3em;
   }
   .prose blockquote {
     font-weight: 500;
     font-style: italic;
-    color: #111827;
+    color: #18181b;
     border-left-width: 0.25rem;
-    border-left-color: #e5e7eb;
+    border-left-color: #e4e4e7;
     quotes: "\201C""\201D""\2018""\2019";
     margin-top: 1.6em;
     margin-bottom: 1.6em;
@@ -96,7 +96,7 @@ Tools / interpret test / css / 0: |-
     content: close-quote;
   }
   .prose h1 {
-    color: #111827;
+    color: #18181b;
     font-weight: 800;
     font-size: 2.25em;
     margin-top: 0;
@@ -104,7 +104,7 @@ Tools / interpret test / css / 0: |-
     line-height: 1.1111111;
   }
   .prose h2 {
-    color: #111827;
+    color: #18181b;
     font-weight: 700;
     font-size: 1.5em;
     margin-top: 2em;
@@ -112,7 +112,7 @@ Tools / interpret test / css / 0: |-
     line-height: 1.3333333;
   }
   .prose h3 {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
     font-size: 1.25em;
     margin-top: 1.6em;
@@ -120,20 +120,20 @@ Tools / interpret test / css / 0: |-
     line-height: 1.6;
   }
   .prose h4 {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
     margin-top: 1.5em;
     margin-bottom: 0.5em;
     line-height: 1.5;
   }
   .prose figure figcaption {
-    color: #6b7280;
+    color: #71717a;
     font-size: 0.875em;
     line-height: 1.4285714;
     margin-top: 0.8571429em;
   }
   .prose code {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
     font-size: 0.875em;
   }
@@ -144,11 +144,11 @@ Tools / interpret test / css / 0: |-
     content: "`";
   }
   .prose a code {
-    color: #111827;
+    color: #18181b;
   }
   .prose pre {
-    color: #e5e7eb;
-    background-color: #1f2937;
+    color: #e4e4e7;
+    background-color: #27272a;
     overflow-x: auto;
     font-size: 0.875em;
     line-height: 1.7142857;
@@ -187,10 +187,10 @@ Tools / interpret test / css / 0: |-
     line-height: 1.7142857;
   }
   .prose thead {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
     border-bottom-width: 1px;
-    border-bottom-color: #d1d5db;
+    border-bottom-color: #d4d4d8;
   }
   .prose thead th {
     vertical-align: bottom;
@@ -200,7 +200,7 @@ Tools / interpret test / css / 0: |-
   }
   .prose tbody tr {
     border-bottom-width: 1px;
-    border-bottom-color: #e5e7eb;
+    border-bottom-color: #e4e4e7;
   }
   .prose tbody tr:last-child {
     border-bottom-width: 0;
@@ -1116,19 +1116,19 @@ Tools / with extend / css / 0: |-
     line-height: 1.75;
   }
   .prose [class~="lead"] {
-    color: #4b5563;
+    color: #52525b;
     font-size: 1.25em;
     line-height: 1.6;
     margin-top: 1.2em;
     margin-bottom: 1.2em;
   }
   .prose a {
-    color: #111827;
+    color: #18181b;
     text-decoration: underline;
     font-weight: 500;
   }
   .prose strong {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
   }
   .prose ol[type="A"] {
@@ -1166,7 +1166,7 @@ Tools / with extend / css / 0: |-
     content: counter(list-item, var(--list-counter-style, decimal)) ".";
     position: absolute;
     font-weight: 400;
-    color: #6b7280;
+    color: #71717a;
     left: 0;
   }
   .prose ul > li {
@@ -1176,7 +1176,7 @@ Tools / with extend / css / 0: |-
   .prose ul > li::before {
     content: "";
     position: absolute;
-    background-color: #d1d5db;
+    background-color: #d4d4d8;
     border-radius: 50%;
     width: 0.375em;
     height: 0.375em;
@@ -1184,16 +1184,16 @@ Tools / with extend / css / 0: |-
     left: 0.25em;
   }
   .prose hr {
-    border-color: #e5e7eb;
+    border-color: #e4e4e7;
     margin-top: 3em;
     margin-bottom: 3em;
   }
   .prose blockquote {
     font-weight: 500;
     font-style: italic;
-    color: #111827;
+    color: #18181b;
     border-left-width: 0.25rem;
-    border-left-color: #e5e7eb;
+    border-left-color: #e4e4e7;
     quotes: "\201C""\201D""\2018""\2019";
     margin-top: 1.6em;
     margin-bottom: 1.6em;
@@ -1206,7 +1206,7 @@ Tools / with extend / css / 0: |-
     content: close-quote;
   }
   .prose h1 {
-    color: #111827;
+    color: #18181b;
     font-weight: 800;
     font-size: 2.25em;
     margin-top: 0;
@@ -1214,7 +1214,7 @@ Tools / with extend / css / 0: |-
     line-height: 1.1111111;
   }
   .prose h2 {
-    color: #111827;
+    color: #18181b;
     font-weight: 700;
     font-size: 1.5em;
     margin-top: 2em;
@@ -1222,7 +1222,7 @@ Tools / with extend / css / 0: |-
     line-height: 1.3333333;
   }
   .prose h3 {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
     font-size: 1.25em;
     margin-top: 1.6em;
@@ -1230,20 +1230,20 @@ Tools / with extend / css / 0: |-
     line-height: 1.6;
   }
   .prose h4 {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
     margin-top: 1.5em;
     margin-bottom: 0.5em;
     line-height: 1.5;
   }
   .prose figure figcaption {
-    color: #6b7280;
+    color: #71717a;
     font-size: 0.875em;
     line-height: 1.4285714;
     margin-top: 0.8571429em;
   }
   .prose code {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
     font-size: 0.875em;
   }
@@ -1254,11 +1254,11 @@ Tools / with extend / css / 0: |-
     content: "`";
   }
   .prose a code {
-    color: #111827;
+    color: #18181b;
   }
   .prose pre {
-    color: #e5e7eb;
-    background-color: #1f2937;
+    color: #e4e4e7;
+    background-color: #27272a;
     overflow-x: auto;
     font-size: 0.875em;
     line-height: 1.7142857;
@@ -1297,10 +1297,10 @@ Tools / with extend / css / 0: |-
     line-height: 1.7142857;
   }
   .prose thead {
-    color: #111827;
+    color: #18181b;
     font-weight: 600;
     border-bottom-width: 1px;
-    border-bottom-color: #d1d5db;
+    border-bottom-color: #d4d4d8;
   }
   .prose thead th {
     vertical-align: bottom;
@@ -1310,7 +1310,7 @@ Tools / with extend / css / 0: |-
   }
   .prose tbody tr {
     border-bottom-width: 1px;
-    border-bottom-color: #e5e7eb;
+    border-bottom-color: #e4e4e7;
   }
   .prose tbody tr:last-child {
     border-bottom-width: 0;
